--- a/docs/rtk-query/usage/server-side-rendering.mdx
+++ b/docs/rtk-query/usage/server-side-rendering.mdx
@@ -26,20 +26,28 @@ The workflow is as follows:
 
   [examples](docblock://query/createApi.ts?token=CreateApiOptions.extractRehydrationInfo)
 
+An example repo using `next.js` is available [here](https://github.com/phryneas/ssr-experiments/tree/main/nextjs-blog).
+
 :::tip
 While memory leaks are not anticipated, once a render is sent to the client and the store is being
 removed from memory, you may wish to also call `store.dispatch(api.util.resetApiState())` to
 ensure that no rogue timers are left running.
 :::
 
-An example repo using `next.js` is available [here](https://github.com/phryneas/ssr-experiments/tree/main/nextjs-blog).
+:::tip
+In order to avoid providing stale data with Static Site Generation (SSG), you may wish to set
+[`refetchOnMountOrArgChange`](../api/createApi.mdx#refetchonmountorargchange) to a reasonable value
+such as 900 (seconds) in order to allow data to be re-fetched if it has been that long (in seconds) since
+the page was generated.
+:::
 
 ## Server Side Rendering elsewhere
 
 If you are not using `next.js`, and the example above cannot be adapted to your SSR framework,
-an `unstable__` marked approach is available to support SSR scenarios that render the full tree
-multiple times until nothing changes any more. Doing so might require async code to be triggered
-during render and not safely in an effect.
+an `unstable__` marked approach is available to support SSR scenarios where you need to execute
+async code during render and not safely in an effect.
+This is a similar approach to using [`getDataFromTree`](https://www.apollographql.com/docs/react/performance/server-side-rendering/#executing-queries-with-getdatafromtree)
+with [Apollo](https://www.apollographql.com/docs/).
 
 The workflow is as follows:
 
