--- a/docs/rtk-query/usage/server-side-rendering.mdx
+++ b/docs/rtk-query/usage/server-side-rendering.mdx
@@ -37,8 +37,8 @@ ensure that no rogue timers are left running.
 :::tip
 In order to avoid providing stale data with Static Site Generation (SSG), you may wish to set
 [`refetchOnMountOrArgChange`](../api/createApi.mdx#refetchonmountorargchange) to a reasonable value
-such as 900 (seconds) in order to allow data to be re-fetched if it has been that long (in seconds) since
-the page was generated.
+such as 900 (seconds) in order to allow data to be re-fetched when accessed if it has been that
+long since the page was generated.
 :::
 
 ## Server Side Rendering elsewhere
