Updated parallel codeblock in serializabilityMiddleware.mdx

--- a/docs/api/serializabilityMiddleware.mdx
+++ b/docs/api/serializabilityMiddleware.mdx
@@ -40,7 +40,7 @@ interface SerializableStateInvariantMiddlewareOptions {
 
   /**
    * An array of dot-separated path strings to ignore when checking
-   * for serializability, Defaults to ['meta.arg']
+   * for serializability, Defaults to ['meta.arg', 'meta.baseQueryMeta']
    */
   ignoredActionPaths?: string[]
 
