📝 Document SSR & persistence/rehydration related features (#1639)
* 📝 Update cache management utils in overview

* 📝 Document SSR related features

* 📝 Document persistence related features

* 📝 Update `extractRehydrationInfo` documentation

* 📝 Update various ssr/rehydration documentation

* 📝 Remove redundancy

* 📝 Merge API slice util docs

- Merge 'Cache Management Utils' & 'Miscellaneous Utils'
  into 'API Slice Utils'
- Add re-direct from `cache-management-utils` to `api-slice-utils`

* 📝 Expand `getRunningOperationPromise` description

* Apply suggestions from code review

Co-authored-by: Lenz Weber <mail@lenzw.de>

--- a/docs/rtk-query/api/createApi.mdx
+++ b/docs/rtk-query/api/createApi.mdx
@@ -56,6 +56,16 @@ export const { useGetPokemonByNameQuery } = pokemonApi
 ```ts no-transpile
   baseQuery(args: InternalQueryArgs, api: BaseQueryApi, extraOptions?: DefinitionExtraOptions): any;
   endpoints(build: EndpointBuilder<InternalQueryArgs, TagTypes>): Definitions;
+  extractRehydrationInfo?: (
+    action: AnyAction,
+    {
+      reducerPath,
+    }: {
+      reducerPath: ReducerPath
+    }
+  ) =>
+    | undefined
+    | CombinedState<Definitions, TagTypes, ReducerPath>
   tagTypes?: readonly TagTypes[];
   reducerPath?: ReducerPath;
   serializeQueryArgs?: SerializeQueryArgs<InternalQueryArgs>;
@@ -289,6 +299,15 @@ export const { endpoints, reducerPath, reducer, middleware } = api
 // endpoints.addPost.initiate(), endpoints.addPost.select(), endpoints.addPost.useMutation()
 // see `createApi` overview for _all exports_
 ```
+
+### `extractRehydrationInfo`
+
+[summary](docblock://query/createApi.ts?token=CreateApiOptions.extractRehydrationInfo)
+
+[examples](docblock://query/createApi.ts?token=CreateApiOptions.extractRehydrationInfo)
+
+See also [Server Side Rendering](../usage/server-side-rendering.mdx) and
+[Persistence and Rehydration](../usage/persistence-and-rehydration.mdx).
 
 ### `tagTypes`
 
