--- a/docs/rtk-query/api/created-api/overview.mdx
+++ b/docs/rtk-query/api/created-api/overview.mdx
@@ -44,11 +44,29 @@ type Api = {
   injectEndpoints: (options: InjectEndpointsOptions) => UpdatedApi
   enhanceEndpoints: (options: EnhanceEndpointsOptions) => UpdatedApi
 
-  // Cache management utilities
+  // Utilities
   utils: {
     updateQueryData: UpdateQueryDataThunk
     patchQueryData: PatchQueryDataThunk
     prefetch: PrefetchThunk
+    invalidateTags: ActionCreatorWithPayload<
+      Array<TagTypes | FullTagDescription<TagTypes>>,
+      string
+    >
+    resetApiState: SliceActions['resetApiState']
+    getRunningOperationPromises: () => Array<Promise<unknown>>
+    getRunningOperationPromise: <EndpointName extends QueryKeys<Definitions>>(
+      endpointName: EndpointName,
+      args: QueryArgFrom<Definitions[EndpointName]>
+    ) =>
+      | QueryActionCreatorResult<Definitions[EndpointName]>
+      | undefined
+    getRunningOperationPromise: <EndpointName extends MutationKeys<Definitions>>(
+      endpointName: EndpointName,
+      fixedCacheKeyOrRequestId: string
+    ) =>
+      | MutationActionCreatorResult<Definitions[EndpointName]>
+      | undefined
   }
 
   // Internal actions
@@ -92,6 +110,19 @@ Each API slice object has `injectEndpoints` and `enhanceEndpoints` functions to 
 :::info API Reference
 
 - [API Slices: Code Splitting and Generation](./code-splitting.mdx)
+
+:::
+
+## API Slice Utilities
+
+The `util` field includes various utility functions that can be used to manage the cache, including
+manually updating query cache data, triggering pre-fetching of data, manually invalidating tags,
+and manually resetting the api state, as well as other utility functions that can be used in
+various scenarios, including SSR.
+
+:::info API Reference
+
+- [API Slices: Utilities](./api-slice-utils.mdx)
 
 :::
 
