fix(docs): fix the docs' example error.

--- a/docs/api/createReducer.mdx
+++ b/docs/api/createReducer.mdx
@@ -271,11 +271,11 @@ const reducer = createReducer(0, (builder) => {
   builder
     .addCase('increment', (state) => state + 1)
     .addMatcher(
-      (action) => action.startsWith('i'),
+      (action) => action.type.startsWith('i'),
       (state) => state * 5
     )
     .addMatcher(
-      (action) => action.endsWith('t'),
+      (action) => action.type.endsWith('t'),
       (state) => state + 2
     )
 })
