--- a/docs/rtk-query/usage/customizing-queries.mdx
+++ b/docs/rtk-query/usage/customizing-queries.mdx
@@ -430,7 +430,7 @@ export const api = createApi({
     getPosts: build.query<PostsResponse, void>({
       query: () => ({ url: 'posts' }),
     }),
-    getPost: build.query<PostsResponse, string>({
+    getPost: build.query<Post, string>({
       query: (id) => ({ url: `post/${id}` }),
       extraOptions: { maxRetries: 8 }, // You can override the retry behavior on each endpoint
     }),
