--- a/docs/rtk-query/api/createApi.mdx
+++ b/docs/rtk-query/api/createApi.mdx
@@ -158,6 +158,13 @@ export type QueryDefinition<
     arg: QueryArg
   ): ResultType | Promise<ResultType>
 
+  /* transformErrorResponse only available with `query`, not `queryFn` */
+  transformErrorResponse?(
+    baseQueryReturnValue: BaseQueryError<BaseQuery>,
+    meta: BaseQueryMeta<BaseQuery>,
+    arg: QueryArg
+  ): unknown
+
   extraOptions?: BaseQueryExtraOptions<BaseQuery>
 
   providesTags?: ResultDescription<
@@ -225,6 +232,13 @@ export type MutationDefinition<
     meta: BaseQueryMeta<BaseQuery>,
     arg: QueryArg
   ): ResultType | Promise<ResultType>
+
+  /* transformErrorResponse only available with `query`, not `queryFn` */
+  transformErrorResponse?(
+    baseQueryReturnValue: BaseQueryError<BaseQuery>,
+    meta: BaseQueryMeta<BaseQuery>,
+    arg: QueryArg
+  ): unknown
 
   extraOptions?: BaseQueryExtraOptions<BaseQuery>
 
@@ -429,6 +443,21 @@ See also [Customizing query responses with `transformResponse`](../usage/customi
 ```ts title="Unpack a deeply nested collection" no-transpile
 transformResponse: (response, meta, arg) =>
   response.some.deeply.nested.collection
+```
+
+### `transformErrorResponse`
+
+_(optional, not applicable with `queryFn`)_
+
+[summary](docblock://query/endpointDefinitions.ts?token=EndpointDefinitionWithQuery.transformErrorResponse)
+
+In some cases, you may want to manipulate the error returned from a query before you put it in the cache. In this instance, you can take advantage of `transformErrorResponse`.
+
+See also [Customizing query responses with `transformErrorResponse`](../usage/customizing-queries.mdx#customizing-query-responses-with-transformerrorresponse)
+
+```ts title="Unpack a deeply nested error object" no-transpile
+transformErrorResponse: (response, meta, arg) =>
+  response.data.some.deeply.nested.errorObject
 ```
 
 ### `extraOptions`
