Fix named export used as default export in example

--- a/docs/tutorials/rtk-query.mdx
+++ b/docs/tutorials/rtk-query.mdx
@@ -148,7 +148,7 @@ import { render } from 'react-dom'
 import { Provider } from 'react-redux'
 
 import App from './App'
-import store from './app/store'
+import { store } from './app/store'
 
 const rootElement = document.getElementById('root')
 render(
