📝 Fix broken docs build

--- a/docs/tutorials/rtk-query.mdx
+++ b/docs/tutorials/rtk-query.mdx
@@ -138,7 +138,7 @@ export default function App() {
 // file: app/store.ts noEmit
 import { configureStore } from '@reduxjs/toolkit'
 
-export default configureStore({
+export const store = configureStore({
   reducer: {},
 })
 
