fix(customizing-queries): fixing typo

--- a/docs/rtk-query/usage/customizing-queries.mdx
+++ b/docs/rtk-query/usage/customizing-queries.mdx
@@ -392,9 +392,9 @@ const baseQueryWithReauth: BaseQueryFn<
 
 #### Preventing multiple unauthorized errors
 
-Implementing [`async-mutex`](https://github.com/DirtyHairy/async-mutex) to prevent multiple calls to '/auth/refreshToken' when multiple calls fail with [`401 Unauthorized`](https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/401) errors.
+Implementing [`async-mutex`](https://github.com/DirtyHairy/async-mutex) to prevent multiple calls to '/refreshToken' when multiple calls fail with [`401 Unauthorized`](https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/401) errors.
 
-```ts title="Preventing multiple calls to '/auth/refreshToken'"
+```ts title="Preventing multiple calls to '/refreshToken'"
 // file: authSlice.ts noEmit
 declare function tokenReceived(args?: any): void
 declare function loggedOut(): void
