--- a/docs/rtk-query/usage/customizing-queries.mdx
+++ b/docs/rtk-query/usage/customizing-queries.mdx
@@ -271,7 +271,7 @@ const axiosBaseQuery =
 const api = createApi({
   // highlight-start
   baseQuery: axiosBaseQuery({
-    baseUrl: 'http://example.com',
+    baseUrl: 'https://example.com',
   }),
   // highlight-end
   endpoints(build) {
