--- a/docs/rtk-query/usage-with-typescript.mdx
+++ b/docs/rtk-query/usage-with-typescript.mdx
@@ -501,9 +501,8 @@ function MaybePost({ id }: { id?: number }) {
 ## Type safe error handling
 
 When an error is gracefully provided from a [`base query`](./api/createApi.mdx#baseQuery), RTK query will provide the error
-directly. If an unexpected error is thrown by user code rather than a graceful handled error,
-that error will be transformed into a `SerializedError` shape. Users should ensure that they are checking which
-kind of error they are dealing with prior to attempting to access it's properties. This can be done in a type safe manner either
+directly. If an unexpected error is thrown by user code rather than a handled error,
+that error will be transformed into a `SerializedError` shape. Users should make sure that they are checking which kind of error they are dealing with before attempting to access its properties. This can be done in a type safe manner either
 by using a type guard, e.g. by checking for [discriminated properties](https://www.typescriptlang.org/docs/handbook/2/narrowing.html#the-in-operator-narrowing),
 or using a [type predicate](https://www.typescriptlang.org/docs/handbook/2/narrowing.html#using-type-predicates).
 
@@ -544,7 +543,7 @@ export type FetchBaseQueryError =
   | {
       /**
        * * `"CUSTOM_ERROR"`:
-       *   A custom error type that you can return from your `fetchFn` where another error might not make sense.
+       *   A custom error type that you can return from your `queryFn` where another error might not make sense.
        **/
       status: 'CUSTOM_ERROR'
       data?: unknown
@@ -588,9 +587,10 @@ function PostDetail() {
         </div>
       )
     }
-
-    // you can access all properties of `SerializedError` here
-    return <div>{error.message}</div>
+    else {
+        // you can access all properties of `SerializedError` here
+        return <div>{error.message}</div>
+    }
   }
 
   if (data) {
